# openai-prep

./: .gitignore  AGENTS.md  README.md  USER_STORIES.md  main.py  pyproject.toml
.github/workflows/: ci.yml
evals/: create_eval.py  run_eval.py  run_local_eval.py
evals/data/: health_queries.jsonl
src/openai_prep/: __init__.py  config.py  guardrails.py  schemas.py  tools.py  verify.py  workflow.py
src/openai_prep/agents/: __init__.py  factories.py  information.py  instructions.py  orchestrator.py  recommender.py  rejection.py  synthesis.py
tests/: test_agent_factories.py  test_config.py  test_entry_point.py  test_evals_dataset.py  test_evals_scripts.py  test_guardrails.py  test_schemas.py  test_smoke.py  test_tools.py  test_verify.py  test_workflow.py
